[+] Added basic tests